src/objects/ACETFAST_MuleSoftMappingFileNaming__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This configuration object, it can consists the MuleSoft file naming conventions</description>
    <fields>
        <fullName>FileType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FileType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InboundFileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InboundFileName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundFileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outbound File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ACETFAST_MuleSoftMappingFileNaming</label>
</CustomObject>